--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -101,7 +101,7 @@
     <item>
      <widget class="QPushButton" name="ButtonCancel" >
       <property name="text" >
-       <string>Abbrechen</string>
+       <string>Cancel</string>
       </property>
      </widget>
     </item>
@@ -125,7 +125,7 @@
     </sizepolicy>
    </property>
    <property name="text" >
-    <string>Geben Sie das Passwort ein oder wählen Sie eine Schlüsseldatei.</string>
+    <string>Enter a Password and/or choose a key file.</string>
    </property>
   </widget>
   <widget class="Q3GroupBox" name="groupframe" >
@@ -146,7 +146,7 @@
     </sizepolicy>
    </property>
    <property name="title" >
-    <string>Schlüssel</string>
+    <string>Key</string>
    </property>
    <property name="orientation" >
     <enum>Qt::Vertical</enum>
@@ -178,7 +178,7 @@
         </sizepolicy>
        </property>
        <property name="text" >
-        <string>Passwort:</string>
+        <string>Password:</string>
        </property>
       </widget>
      </item>
@@ -221,7 +221,7 @@
         </sizepolicy>
        </property>
        <property name="text" >
-        <string>Schlüsseldatei oder Datenträger:</string>
+        <string>Key file or directory:</string>
        </property>
       </widget>
      </item>
@@ -248,10 +248,10 @@
         </sizepolicy>
        </property>
        <property name="text" >
-        <string>W&amp;ählen...</string>
+        <string>&amp;Browse...</string>
        </property>
        <property name="shortcut" >
-        <string>Alt+Ä</string>
+        <string>Alt+B</string>
        </property>
       </widget>
      </item>
@@ -284,7 +284,7 @@
         </sizepolicy>
        </property>
        <property name="text" >
-        <string>Passwort UND Schlüsseldatei benutzen</string>
+        <string>Use Password AND Key File</string>
        </property>
       </widget>
      </item>
