--- a/src/forms/SimplePasswordDlg.ui
+++ b/src/forms/SimplePasswordDlg.ui
@@ -1,7 +1,7 @@
-<ui version="4.0" stdsetdef="1" >
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
+<ui stdsetdef="1" version="4.0" >
+  <author/>
+  <comment/>
+  <exportmacro/>
   <class>SimplePasswordDialog</class>
   <widget class="QDialog" name="SimplePasswordDialog" >
     <property name="geometry" >
@@ -33,7 +33,7 @@
       </size>
     </property>
     <property name="windowTitle" >
-      <string>Passworteingabe</string>
+      <string>Enter your Password</string>
     </property>
     <widget class="QLabel" name="textLabel1" >
       <property name="geometry" >
@@ -45,7 +45,7 @@
         </rect>
       </property>
       <property name="text" >
-        <string>Passwort:</string>
+        <string>Password:</string>
       </property>
     </widget>
     <widget class="QLineEdit" name="EditPassword" >
@@ -84,7 +84,7 @@
         </rect>
       </property>
       <property name="text" >
-        <string>Abbre&amp;chen</string>
+        <string>&amp;Cancel</string>
       </property>
       <property name="shortcut" >
         <string>Alt+C</string>
