--- a/src/forms/ChangeKeyDlg.ui
+++ b/src/forms/ChangeKeyDlg.ui
@@ -33,7 +33,7 @@
    </size>
   </property>
   <property name="windowTitle" >
-   <string>Hauptschlüssel ändern</string>
+   <string>Change Master Key</string>
   </property>
   <widget class="QLabel" name="Banner" >
    <property name="geometry" >
@@ -69,7 +69,7 @@
     </rect>
    </property>
    <property name="title" >
-    <string>Schlüssel</string>
+    <string>Key</string>
    </property>
    <property name="orientation" >
     <enum>Qt::Vertical</enum>
@@ -104,7 +104,7 @@
      </rect>
     </property>
     <property name="text" >
-     <string>Passwort UND Schlüsseldatei verwenden</string>
+     <string>Use password AND key file</string>
     </property>
    </widget>
    <widget class="QLabel" name="textLabel3" >
@@ -117,7 +117,7 @@
      </rect>
     </property>
     <property name="text" >
-     <string>Schlüsseldatei oder Datenträger:</string>
+     <string>Key file or directory:</string>
     </property>
    </widget>
    <widget class="QLabel" name="textLabel1_3" >
@@ -130,7 +130,7 @@
      </rect>
     </property>
     <property name="text" >
-     <string>Passwortwiederholung:</string>
+     <string>Password Repetition:</string>
     </property>
    </widget>
    <widget class="QLabel" name="textLabel2" >
@@ -143,7 +143,7 @@
      </rect>
     </property>
     <property name="text" >
-     <string>Passwort:</string>
+     <string>Password:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="ButtonChangeEchoMode" >
@@ -169,10 +169,10 @@
      </rect>
     </property>
     <property name="text" >
-     <string>W&amp;ählen...</string>
+	  <string>&amp;Browse...</string>
     </property>
     <property name="shortcut" >
-     <string>Alt+Ä</string>
+     <string>Alt+B</string>
     </property>
    </widget>
    <widget class="QComboBox" name="Combo_Dirs" >
@@ -202,7 +202,7 @@
     <enum>QFrame::Plain</enum>
    </property>
    <property name="text" >
-    <string>Geben Sie das Passwort ein und/oder wählen Sie eine Schlüsseldatei.</string>
+    <string>Enter a Password and/or choose a key file.</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ButtonCancel" >
@@ -215,10 +215,10 @@
     </rect>
    </property>
    <property name="text" >
-    <string>Abb&amp;rechen</string>
+    <string>&amp;Cancel</string>
    </property>
    <property name="shortcut" >
-    <string>Alt+R</string>
+    <string>Alt+C</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ButtonOK" >
