--- a/src/forms/EditGroupDlg.ui
+++ b/src/forms/EditGroupDlg.ui
@@ -1,5 +1,5 @@
 <ui version="4.0" stdsetdef="1" >
-  <author></author>
+  <author>Tarek Saidi</author>
   <comment></comment>
   <exportmacro></exportmacro>
   <class>EditGroupDialog</class>
@@ -25,7 +25,7 @@
       </size>
     </property>
     <property name="windowTitle" >
-      <string>Gruppeneigenschaften</string>
+      <string>Group Properties</string>
     </property>
     <widget class="Line" name="line1" >
       <property name="geometry" >
@@ -63,7 +63,7 @@
         </rect>
       </property>
       <property name="text" >
-        <string>Titel:</string>
+        <string>Title:</string>
       </property>
     </widget>
     <widget class="QLabel" name="Label2" >
@@ -76,7 +76,7 @@
         </rect>
       </property>
       <property name="text" >
-        <string>Symbol:</string>
+        <string>Icon:</string>
       </property>
     </widget>
     <widget class="QComboBox" name="ComboIconPicker" >
@@ -99,7 +99,7 @@
         </rect>
       </property>
       <property name="text" >
-        <string>Abbre&amp;chen</string>
+        <string>&amp;Cancel</string>
       </property>
       <property name="shortcut" >
         <string>Alt+C</string>
