--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -105,6 +105,13 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QPushButton" name="ButtonExit" >
+      <property name="text" >
+       <string>Exit</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QLabel" name="textLabel1" >
