--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -464,31 +464,48 @@
       <string>Alt+Ö</string>
      </property>
     </widget>
-    <widget class="QWidget" name="widget" >
+    <widget class="QWidget" name="" >
      <property name="geometry" >
       <rect>
        <x>10</x>
        <y>50</y>
        <width>531</width>
-       <height>25</height>
+       <height>58</height>
       </rect>
      </property>
-     <layout class="QHBoxLayout" >
+     <layout class="QGridLayout" >
       <property name="margin" >
        <number>0</number>
       </property>
       <property name="spacing" >
        <number>6</number>
       </property>
-      <item>
-       <widget class="QLabel" name="textLabel1_4" >
+      <item row="1" column="2" >
+       <widget class="QPushButton" name="Button_MountDirBrowse" >
+        <property name="text" >
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label" >
         <property name="text" >
          <string>Browser Command:</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="Edit_MountDir" />
+      </item>
+      <item row="0" column="1" >
        <widget class="QLineEdit" name="Edit_BrowserCmd" />
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
+         <string>Media Directory:</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -514,7 +531,6 @@
   <tabstop>ButtonTextColor</tabstop>
   <tabstop>ButtonColor2</tabstop>
   <tabstop>CheckBox_OpenLast</tabstop>
-  <tabstop>Edit_BrowserCmd</tabstop>
   <tabstop>ButtonOK</tabstop>
   <tabstop>ButtonCancel</tabstop>
  </tabstops>
