Finished PasswordDlg, Added Text Export
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@56 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -509,7 +509,7 @@
       <string>Alt+Ö</string>
      </property>
     </widget>
-    <widget class="QCheckBox" name="CheckBox_RememberKey" >
+    <widget class="QCheckBox" name="CheckBox_RememberLastKey" >
      <property name="geometry" >
       <rect>
        <x>30</x>
