--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -79,6 +79,9 @@
        <property name="rootIsDecorated" >
         <bool>false</bool>
        </property>
+       <property name="sortingEnabled" >
+        <bool>true</bool>
+       </property>
       </widget>
      </widget>
     </item>
@@ -509,16 +512,16 @@
  <pixmapfunction></pixmapfunction>
  <customwidgets>
   <customwidget>
-   <class>KeepassGroupView</class>
+   <class>KeepassEntryView</class>
    <extends>QTreeWidget</extends>
-   <header>../../src/lib/GroupView.h</header>
+   <header>../../src/lib/EntryView.h</header>
    <container>0</container>
    <pixmap></pixmap>
   </customwidget>
   <customwidget>
-   <class>KeepassEntryView</class>
+   <class>KeepassGroupView</class>
    <extends>QTreeWidget</extends>
-   <header>../../src/lib/EntryView.h</header>
+   <header>../../src/lib/GroupView.h</header>
    <container>0</container>
    <pixmap></pixmap>
   </customwidget>
