--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -137,7 +137,7 @@
    <property name="orientation" >
     <enum>Qt::Vertical</enum>
    </property>
-   <widget class="QWidget" name="" >
+   <widget class="QWidget" name="layoutWidget" >
     <property name="geometry" >
      <rect>
       <x>10</x>
@@ -164,7 +164,7 @@
        <item row="1" column="0" >
         <widget class="QLabel" name="Label_PasswordRep" >
          <property name="text" >
-          <string>TextLabel</string>
+          <string>Password Repet.:</string>
          </property>
         </widget>
        </item>
