--- a/src/forms/AboutDlg.ui
+++ b/src/forms/AboutDlg.ui
@@ -124,14 +124,14 @@
     <widget class="QTextEdit" name="Edit_Thanks" >
      <property name="geometry" >
       <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>401</width>
-       <height>171</height>
+       <x>3</x>
+       <y>3</y>
+       <width>390</width>
+       <height>166</height>
       </rect>
      </property>
-     <property name="html" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>&lt;/body>&lt;/html></string>
+     <property name="readOnly" >
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -142,11 +142,14 @@
     <widget class="QTextEdit" name="Edit_Translation" >
      <property name="geometry" >
       <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>401</width>
-       <height>171</height>
+       <x>3</x>
+       <y>3</y>
+       <width>390</width>
+       <height>167</height>
       </rect>
+     </property>
+     <property name="readOnly" >
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -157,11 +160,14 @@
     <widget class="QTextEdit" name="Edit_License" >
      <property name="geometry" >
       <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>401</width>
-       <height>171</height>
+       <x>3</x>
+       <y>3</y>
+       <width>391</width>
+       <height>167</height>
       </rect>
+     </property>
+     <property name="readOnly" >
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
