--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -104,6 +104,9 @@
         <height>60</height>
        </size>
       </property>
+      <property name="readOnly" >
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
@@ -218,40 +221,6 @@
    <addaction name="menuAnsicht" />
    <addaction name="menuExtras" />
    <addaction name="menuHilfe" />
-  </widget>
-  <widget class="QToolBar" name="toolBar" >
-   <property name="sizePolicy" >
-    <sizepolicy>
-     <hsizetype>1</hsizetype>
-     <vsizetype>7</vsizetype>
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize" >
-    <size>
-     <width>15</width>
-     <height>6</height>
-    </size>
-   </property>
-   <property name="maximumSize" >
-    <size>
-     <width>16777215</width>
-     <height>22</height>
-    </size>
-   </property>
-   <property name="orientation" >
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="iconSize" >
-    <size>
-     <width>16</width>
-     <height>16</height>
-    </size>
-   </property>
-   <attribute name="toolBarArea" >
-    <number>4</number>
-   </attribute>
   </widget>
   <action name="FileNewAction" >
    <property name="text" >
